# jscbridge

./: .gitignore  PLAN.md  README.md  build.gradle  package-lock.json  settings.gradle
.github/: copilot-instructions.md
cpp/: CMakeLists.txt  jsc_bridge.cpp
src/main/cpp/: CMakeLists.txt  jsc_bridge.cpp
src/main/java/com/clevertree/jscbridge/: JSContext.java  JSException.java  JSObject.java  JavaScriptObject.java
src/main/kotlin/com/clevertree/jscbridge/: JSCManager.kt
